--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/icons/sygnal_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>Hosting Files V1</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
   </body>
 </html>
